# AWS_Scripts

./: bucket-policy.json  buketpolicy.json  code_deploy_permissions.json  lambda_test_event.py  norcal-test.csv  pyproject.toml  stopInstance_tag_prod.py  terminate_instance.py  time_sleep.py
CLI/: lab-oregon-nat-gateway.json  (+2 more)
lab/cfn/runway/: pyproject.toml  runway.yml
lab/cfn/runway/asg.cfn/: common-us-east-2.env  config.yaml
lab/cfn/runway/asg.cfn/blueprints/: bastion_asg.py
lab/cfn/runway/asg.cfn/userdata/: bastion-preview.yml  bastion-prod.yml
lab/cfn/runway/bastion.cfn/: preview-us-east-2.env
lab/cfn/runway/core.cfn/: common-us-east-1.env  common-us-east-2.env  common-us-west-2.env  config.yml  core.yaml  platform_version.py
lab/cfn/runway/core.cfn/core_blueprints/: ami_lookup.py  chef_buckets.py  cw_alarm.py  roles.py  security_groups.py  tf_state.py  vpc.py  vpn_eip.py
lab/cfn/runway/core.cfn/core_blueprints/shared_iam/: iam_policies.py
lab/cfn/runway/core.cfn/core_blueprints/utils/: version.py  version_check.py
lab/cfn/runway/core.cfn/core_hooks/: cookbook_archive.py  keypair.py  s3.py  s3_cache.py
lab/cfn/runway/core.cfn/templates/: core.yml
lab/cfn/runway/stacker-core.cfn/: README.md  common-us-east-2.env  core.yaml
lab/cfn/runway/stacker-core.cfn/blueprints/: vpc.py
lab/cfn/runway/stacker-core.cfn/core_blueprints/: sns_topic.py  ssm_chefrun_documents.py  vpc.py  vpn_server.py
lab/cfn/runway/stacker-core.cfn/core_blueprints/custom_resources/: cfn_custom_classes.py
lab/cfn/runway/stacker-core.cfn/core_hooks/: ssm.py
(+248 files in other folders)
