[tool.poetry]
name = "runway"
version = "0.1.0"
description = ""
authors = ["David Mansfield <papertux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
